@@ -1,14 +1,8 @@
 AUX fontconfig.Gentoo.properties 10932 RMD160 ce1fb555f3f5f281f328c8016e12407ac0893819 SHA1 59f68c06f4f727bc72449a76bd4941cbee626373 SHA256 893b469c87ba547122fe158941c00512bf3f15046251f4b8639d967203d32bc1
 AUX sun-jdk-1.6.env 940 RMD160 2061347f8137915ed421c7592a6909b51bb2110d SHA1 3520843a513f53f8a04782d9a6b373736c24f624 SHA256 f8669f72a512ca892dbe2f4b153ac39e92b6f4e33d3693e969d670134c5b15b8
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
-DIST jdk-6u18-ea-bin-b04-linux-amd64-28_oct_2009.bin 81903252 RMD160 072d11981250a6bf47a05170d0877e7477379301 SHA1 e05c3460b784cff1b72a186c3de8fd7fdb27c443 SHA256 581a90b88cea78db9ba953a264e0089fa47e292a8e22e67dbd0ab0929fd75eb3
-DIST jdk-6u18-ea-bin-b04-linux-i586-28_oct_2009.bin 81844478 RMD160 04111881ceb2f459813466c85993afd1f68781e7 SHA1 422c4941b20d087369ce4d556660f9376eec2350 SHA256 3cd7d0cb05e53bbc8f4088f9c44b65b70940af389e344b204fd50a1045fca8e5
-DIST jdk-6u18-ea-bin-b05-linux-amd64-18_nov_2009.bin 81846790 RMD160 20bc2d29cadd80cdee442f40c5582151cf26326d SHA1 103603067c097206264729a502e436e857ace692 SHA256 4e2e6a6061331e4fc76d763558c13d0a43549669d31b5bce19fd04abd20c0b3e
-DIST jdk-6u18-ea-bin-b05-linux-i586-18_nov_2009.bin 81785883 RMD160 12feb1b4eaa022f659b7415b1003b332f3201c86 SHA1 c4a42832146b564256352276f6c4c66f3c598ce1 SHA256 7764f1ccfab37e75b9e0d24acc4765aeec92f024b749ade3fef67f2572006dc5
-DIST jdk-7-ea-bin-b81-linux-i586-28_jan_2010.bin 89611166 RMD160 d7ccc535ce591e5e381ea397272b6922e1c30f39 SHA1 04862ce793bec220c3020d4bb9f57df27499f095 SHA256 135b3986772b44b361289c585f9952f02e6ec1a16cc72b614c03a7fb7df73b72
-DIST jdk-7-ea-bin-b81-linux-x64-28_jan_2010.bin 88945734 RMD160 78e6979546e130864d4a3fd293d14b2b2d22c1f2 SHA1 6a915595117fe750f836cdbf25c648df24c6f93e SHA256 43d33b76f30b93fbb3cbab968f84ccd78569d9bdbdab38842e16f85c2427ee6d
-EBUILD sun-jdk-1.6.0.18_beta4.ebuild 5526 RMD160 982407152283f44921f49feda14439df3db20d2b SHA1 54de82e1975c277d58805d92b517f51b57cee9a2 SHA256 23acfe2a9a2344490ee1c8728afff9371a9bc3a80d75345a0536d3cf03b66ef8
-EBUILD sun-jdk-1.6.0.18_beta5.ebuild 5526 RMD160 c2d0f060c83a90fa35cbe7b4d1bbf241a4daaeae SHA1 b8bfcc5afedc564083663866d70a34a29e871f3c SHA256 9cc9480c10a1593d877b315c463c2501079fec6822008192ffce5470a41327b8
-EBUILD sun-jdk-1.7.0.0_alpha81.ebuild 5247 RMD160 dd3e01c96baf16a8b4a3a18cf4c657ebdcbba4cd SHA1 c9fc2a742776eae34bd211880d1c3ee2c1a0b39f SHA256 0268685ac36429dbe5fd2238eb109b85cf5f1ffd57bcc2ee2e8f93ec2a3fff50
-MISC ChangeLog 17411 RMD160 a207add68135ec5a703fa426009129420fc46a63 SHA1 19c6509f8235affb4391533320c306a14274281a SHA256 8597852bb6734be7a99a7ad9999c76f94eef0b6cbf176a8a69ebe17332ef96c7
+DIST jdk-7-ea-bin-b82-linux-i586-04_feb_2010.bin 89613100 RMD160 71f81ca65044a694575524f76a55a837563c4062 SHA1 1f9098388594bfe6555148a705db7694991386d8 SHA256 2fe53683b758f34bff151e984525e8022643e0b898b2e1b50d7dd22322116025
+DIST jdk-7-ea-bin-b82-linux-x64-04_feb_2010.bin 88945210 RMD160 d837b457a5a545a3df8e36212511a551de1f2174 SHA1 c7dfd3a09e83fe0ed988c913edc6d00a06bb31c4 SHA256 c7bba47b9667328a55c1bcec3dc2bc0e853ab1d8a8a1b2c8f333542692f40d4f
+EBUILD sun-jdk-1.7.0.0_alpha82.ebuild 5247 RMD160 2795274d839aaf5ec786dc3820eb1b7547dbf9e1 SHA1 72c924e38c231ecd69c98fe9ed6b10932b324c56 SHA256 471e77e76cf0f9b24275c9818909d026eb9a2a253b3321517246cbac66ce23fa
+MISC ChangeLog 17572 RMD160 8a9532e7ac9950758d2c4ade31e9ef755d4b7ad6 SHA1 49e8855298ca5e0f71a012815ab6c824c8b75bee SHA256 755358d8b834ea6b4743407588454b1c60639b3222686d9493da7de4b2ff4629
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
