@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.7.0.0_alpha82 (10 Feb 2010)
+
+  10 Feb 2010; Vlastimil Babka <caster@gentoo.org>
+  +sun-jdk-1.7.0.0_alpha82.ebuild:
+  Version bump, remove 1.6 betas.
+
   31 Jan 2009, Fabian Fingerle <fabian@datensalat.eu>
   -sun-jdk-1.7.0.0_alpha78.ebuild, +sun-jdk-1.7.0.0_alpha81.ebuild:
   Version Bump
